--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
     <title>Projeto Trybewarts</title>
 </head>
 <body>
-    <header><nav class="header"></nav></header>
+    <header>
+        <nav class="header">
+            <img class="trybewarts-header-logo" src="images/trybewarts-header-logo.svg" alt="">
+        </nav>
+    </header>
     <script src="script.js"></script>
 
 </body>
