--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     <header>
         <nav class="header">
             <img class="trybewarts-header-logo" src="images/trybewarts-header-logo.svg" alt="">
+            <form action="" class="trybewarts-login">
+                <input type="email" name="email" id="input-email" placeholder="Email">
+                <input type="password" name="password" id="input-senha" placeholder="Senha">
+                <button id="btn-entrar">Entrar</button>
+            </form>
         </nav>
     </header>
     <script src="script.js"></script>
