--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <header>
         <nav class="header">
             <img class="trybewarts-header-logo" src="images/trybewarts-header-logo.svg" alt="">
+            <h1 id="trybewarts-header-title">Trybewarts</h1>
             <form action="" class="trybewarts-login">
                 <input type="email" name="email" id="input-email" placeholder="Email">
                 <input type="password" name="password" id="input-senha" placeholder="Senha">
