--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
             </form>
         </nav>
     </header>
+    <main id="container-principal">
+        <div>
+            <form action="" id="evaluation-form"></form>
+        </div>
+    </main>
     <script src="script.js"></script>
 
 </body>
