--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <div>
             <form action="" id="evaluation-form"></form>
         </div>
+        <img id="trybewarts-forms-logo" src="images/trybewarts-colored.svg" alt="">
     </main>
     <script src="script.js"></script>
 
