--- a/index.html
+++ b/index.html
@@ -21,11 +21,18 @@
     </header>
     <main id="container-principal">
         <div>
-            <form action="" id="evaluation-form"></form>
+            <form action="" id="evaluation-form">
+                <div>
+                <input type="text" id="input-name" placeholder="Nome">
+                <input type="text" id="input-lastname" placeholder="Sobrenome">
+                </div>
+                <div>
+                  <input type="email" name="Email" id="input-email" placeholder="Email">
+                </div>
+            </form>
         </div>
         <img id="trybewarts-forms-logo" src="images/trybewarts-colored.svg" alt="">
     </main>
     <script src="script.js"></script>
-
 </body>
 </html>
