--- a/index.html
+++ b/index.html
@@ -26,15 +26,32 @@
               <input type="text" id="input-name" placeholder="Nome">
               <input type="text" id="input-lastname" placeholder="Sobrenome">
               </div>
-              <div>
-                <input type="email" name="Email" id="input-email" placeholder="Email">
-                <label for="house">Casa: </label><select name="casa" id="house">
+              <div class="container-contat">
+                <input type="email" id="input-email" placeholder="Email">
+                <label id="label">Casa <select id="house">
+                  <option selected disabled value="">Selecione</option>
                   <option value="Gitnória" id="gitnoria-house">Gitnória</option>
                   <option value="Reactpuff" id="reactpuff-house">Reactpuff</option>
                   <option value="Corvinode" id="corvinode-house">Corvinode</option>
                   <option value="Pytherina" id="pytherina-house">Pytherina</option>
                 </select>
+              </label>
               </div>
+              <label id="label-family">Qual sua família?</label>
+              <label for="input-radio1"><input type="radio" name="family" id="input-radio1" value="Frontend" >Frontend</label>
+              <label for="input-radio2"><input type="radio" name="family" id="input-radio2" value="Backend">Backend</label>
+              <label for="input-radio3"><input type="radio" name="family" id="input-radio3" value="FullStack"> FullStack</label>
+            <label id="label-content" >Qual conteúdo você está com mais vontade de aprender?</label>
+              <div>
+              <label for="check1"><input type="checkbox" name="checkbox" class="subject" value="HoFs" id="check1">HoFs</label>
+              <label for="check2"><input type="checkbox" name="checkbox" class="subject" value="Jest" id="check2">Jest</label>
+              <label for="check3"><input type="checkbox" name="checkbox" class="subject" value="Promises" id="check3">Promises</label>
+            </div>
+            <div>
+              <label for="check4"><input type="checkbox" name="checkbox" class="subject" value="React" id="check4">React</label>
+              <label for="check5"><input type="checkbox" name="checkbox" class="subject" value="SQL" id="check5">SQL</label>
+              <label for="check6"><input type="checkbox" name="checkbox" class="subject" value="Python" id="check6">Python</label>
+            </div>
           </form>
       </div>
       <img id="trybewarts-forms-logo" src="images/trybewarts-colored.svg" alt="">
