--- a/index.html
+++ b/index.html
@@ -52,6 +52,19 @@
               <label for="check5"><input type="checkbox" name="checkbox" class="subject" value="SQL" id="check5">SQL</label>
               <label for="check6"><input type="checkbox" name="checkbox" class="subject" value="Python" id="check6">Python</label>
             </div>
+            <div>
+              <label id="label-rate">Como você avalia a Trybewarts?</label>
+            <label for="radio1"><input type="radio" name="rate" id="radio1" value="1">1</label>
+            <label for="radio2"><input type="radio" name="rate" id="radio2" value="2">2</label>
+            <label for="radio3"><input type="radio" name="rate" id="radio3" value="3">3</label>
+            <label for="radio4"><input type="radio" name="rate" id="radio4" value="4">4</label>
+            <label for="radio5"><input type="radio" name="rate" id="radio5" value="5">5</label>
+            <label for="radio6"><input type="radio" name="rate" id="radio6" value="6">6</label>
+            <label for="radio7"><input type="radio" name="rate" id="radio7" value="7">7</label>
+            <label for="radio8"><input type="radio" name="rate" id="radio8" value="8">8</label>
+            <label for="radio9"><input type="radio" name="rate" id="radio9" value="9">9</label>
+            <label for="radio10"><input type="radio" name="rate" id="radio10" value="10">10</label>
+          </div>
           </form>
       </div>
       <img id="trybewarts-forms-logo" src="images/trybewarts-colored.svg" alt="">
