--- a/index.html
+++ b/index.html
@@ -65,6 +65,10 @@
             <label for="radio9"><input type="radio" name="rate" id="radio9" value="9">9</label>
             <label for="radio10"><input type="radio" name="rate" id="radio10" value="10">10</label>
           </div>
+          <div>
+            <label for="caixa-texto" class="textarea">text Deixe seu comentário:</label><br>
+            <textarea name="caixa-texto" id="caixa-texto" cols="30" rows="10" maxlength="500"></textarea>
+          </div>
           </form>
       </div>
       <img id="trybewarts-forms-logo" src="images/trybewarts-colored.svg" alt="">
