--- a/index.html
+++ b/index.html
@@ -69,6 +69,10 @@
             <label for="caixa-texto" class="textarea">text Deixe seu comentário:</label><br>
             <textarea name="caixa-texto" id="caixa-texto" cols="30" rows="10" maxlength="500"></textarea>
           </div>
+          <div>
+            <input type="checkbox" name="" id="agreement">
+            <label for="agreement" id="label-infos">Você concorda com o uso das informações acima?</label>
+          </div>
           </form>
       </div>
       <img id="trybewarts-forms-logo" src="images/trybewarts-colored.svg" alt="">
