--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
             <input type="checkbox" name="" id="agreement">
             <label for="agreement" id="label-infos">Você concorda com o uso das informações acima?</label>
           </div>
+          <button id="submit-btn" type="submit">Enviar</button>
           </form>
       </div>
       <img id="trybewarts-forms-logo" src="images/trybewarts-colored.svg" alt="">
