tentando resolver conflitos

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 </div>
                 <div class="container-contat">
                   <input type="email" id="input-email" placeholder="Email">
-                  <label id="label">Casa <select id="house">
+                  <label id="label">Casa:<select id="house">
                     <option selected disabled value="">Selecione</option>
                     <option value="Gitnória" id="gitnoria-house" class="family">Gitnória</option>
                     <option value="Reactpuff" id="reactpuff-house" class="family">Reactpuff</option>
@@ -38,10 +38,10 @@
                   </select>
                 </label>
                 </div>
-                <label id="label-family">Qual sua família?</label>
-                <label for="input-radio1"><input type="radio" name="family" id="input-radio1" value="Frontend" >Frontend</label>
-                <label for="input-radio2"><input type="radio" name="family" id="input-radio2" value="Backend">Backend</label>
-                <label for="input-radio3"><input type="radio" name="family" id="input-radio3" value="FullStack"> FullStack</label>
+                <label id="label-family">Qual sua família?</label><br>
+                <label for="input-radio1"> <input type="radio" name="family" id="input-radio1" value="Frontend" >Frontend</label><br>
+                <label for="input-radio2"><input type="radio" name="family" id="input-radio2" value="Backend">Backend</label><br>
+                <label for="input-radio3"><input type="radio" name="family" id="input-radio3" value="FullStack"> FullStack</label><br>
               <label id="label-content" >Qual conteúdo você está com mais vontade de aprender?</label>
                 <div>
                 <label for="check1"><input type="checkbox" name="checkbox" class="subject" value="HoFs" id="check1">HoFs</label>
