--- a/index.html
+++ b/index.html
@@ -29,14 +29,12 @@
                 </div>
                 <div class="container-contat">
                   <input type="email" id="input-email" placeholder="Email">
-                  <label id="label">Casa:<select id="house">
-                    <option selected disabled value="">Selecione</option>
+                  <label id="label">Casa:</label><select id="house" name="casa">
                     <option value="Gitnória" id="gitnoria-house" class="family">Gitnória</option>
                     <option value="Reactpuff" id="reactpuff-house" class="family">Reactpuff</option>
                     <option value="Corvinode" id="corvinode-house" class="family">Corvinode</option>
                     <option value="Pytherina" id="pytherina-house" class="family">Pytherina</option>
                   </select>
-                </label>
                 </div>
                 <label id="label-family">Qual sua família?</label><br>
                 <label for="input-radio1"> <input type="radio" name="family" id="input-radio1" value="Frontend" >Frontend</label><br>
