--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <title>Projeto Trybewarts</title>
 </head>
 <body>
+    <!-- menu superior -->
   <header>
       <nav class="header">
           <img class="trybewarts-header-logo" src="images/trybewarts-header-logo.svg" alt="">
@@ -19,27 +20,36 @@
           </form>
       </nav>
   </header>
+  <!-- formulario -->
   <main id="container-principal">
       <div id="container-form">
             <form action="" id="evaluation-form">
-              <div>
-                <div>
+
+               <!-- nome-e-Sobrenome -->>
+              <div> 
                 <input type="text" id="input-name" placeholder="Nome">
                 <input type="text" id="input-lastname" placeholder="Sobrenome">
-                </div>
-                <div class="container-contat">
+              </div>
+
+                    <!-- email-e-casa -->
+                <div>
                   <input type="email" id="input-email" placeholder="Email">
-                  <label id="label">Casa:</label><select id="house" name="casa">
+                  <label id="label">Casa:</label>
+                  <select id="house" name="casa">
                     <option value="Gitnória" id="gitnoria-house" class="family">Gitnória</option>
                     <option value="Reactpuff" id="reactpuff-house" class="family">Reactpuff</option>
                     <option value="Corvinode" id="corvinode-house" class="family">Corvinode</option>
                     <option value="Pytherina" id="pytherina-house" class="family">Pytherina</option>
                   </select>
                 </div>
+
+                <!-- radio -->
                 <label id="label-family">Qual sua família?</label><br>
                 <label for="input-radio1"> <input type="radio" name="family" id="input-radio1" value="Frontend" >Frontend</label><br>
                 <label for="input-radio2"><input type="radio" name="family" id="input-radio2" value="Backend">Backend</label><br>
                 <label for="input-radio3"><input type="radio" name="family" id="input-radio3" value="FullStack"> FullStack</label><br>
+
+                <!-- checkbox -->
               <label id="label-content" >Qual conteúdo você está com mais vontade de aprender?</label>
                 <div>
                 <label for="check1"><input type="checkbox" name="checkbox" class="subject" value="HoFs" id="check1">HoFs</label>
@@ -51,6 +61,8 @@
                 <label for="check5"><input type="checkbox" name="checkbox" class="subject" value="SQL" id="check5">SQL</label>
                 <label for="check6"><input type="checkbox" name="checkbox" class="subject" value="Python" id="check6">Python</label>
               </div>
+
+              <!-- radio-avaliador -->
               <div>
                 <label id="label-rate">Como você avalia a Trybewarts?</label>
               <label for="radio1"><input type="radio" name="rate" id="radio1" class="nota" value="1">1</label>
@@ -64,22 +76,28 @@
               <label for="radio9"><input type="radio" name="rate" id="radio9" class="nota" value="9">9</label>
               <label for="radio10"><input type="radio" name="rate" id="radio10" class="nota" value="10">10</label>
             </div>
+
+            <!-- caixa-texto -->
             <div>
               <label for="caixa-texto" class="textarea" id="textarea">text Deixe seu comentário:</label><br>
               <textarea name="caixa-texto" id="caixa-texto" cols="30" rows="10" maxlength="500"></textarea>
               <p id="counter">500</p>
             </div>
+
+            <!-- checkbox-agreement -->
             <div>
               <input type="checkbox" name="" id="agreement">
               <label for="agreement" id="label-infos">Você concorda com o uso das informações acima?</label>
               <button id="submit-btn" type="submit" disabled>Enviar</button>
             </div>
+
+            <!-- container-info -->
             <div id="container-info">
               <div id="informacao-usuario"></div>
             </div>
-        </div>
           </form>
       </div>
+      <!-- trybewarts-forms-logo -->
       <img id="trybewarts-forms-logo" src="images/trybewarts-colored.svg" alt="">
   </main>
   <footer>
