--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           <img class="trybewarts-header-logo" src="images/trybewarts-header-logo.svg" alt="">
           <h1 id="trybewarts-header-title">Trybewarts</h1>
           <form action="" class="trybewarts-login">
-              <input type="email" name="email" id="input-email" placeholder="Email">
+              <input type="email" name="email" id="email-login" placeholder="Email">
               <input type="password" name="password" id="input-senha" placeholder="Senha">
               <button id="btn-entrar">Entrar</button>
           </form>
@@ -25,14 +25,14 @@
       <div id="container-form">
             <form action="" id="evaluation-form">
 
-               <!-- nome-e-Sobrenome -->>
+               <!-- nome-e-Sobrenome -->
               <div> 
                 <input type="text" id="input-name" placeholder="Nome">
                 <input type="text" id="input-lastname" placeholder="Sobrenome">
               </div>
 
                     <!-- email-e-casa -->
-                <div>
+                <div class="container-contat">
                   <input type="email" id="input-email" placeholder="Email">
                   <select id="house" name="casa">
                     <option value="Gitnória" id="gitnoria-house" class="family">Gitnória</option>
@@ -46,7 +46,7 @@
                 <label id="label-family">Qual sua família?</label><br>
                 <label for="input-radio1"> <input type="radio" name="family" id="input-radio1" value="Frontend" >Frontend</label><br>
                 <label for="input-radio2"><input type="radio" name="family" id="input-radio2" value="Backend">Backend</label><br>
-                <label for="input-radio3"><input type="radio" name="family" id="input-radio3" value="FullStack"> FullStack</label><br>
+                <label for="input-radio3"><input type="radio" name="family" id="input-radio3" value="FullStack">FullStack</label><br>
 
                 <!-- checkbox -->
               <label id="label-content" >Qual conteúdo você está com mais vontade de aprender?</label>
