--- a/index.html
+++ b/index.html
@@ -24,25 +24,28 @@
   <main id="container-principal">
     <form action="" id="evaluation-form">
       <!-- nome-e-Sobrenome -->
-      <div> 
-        <input type="text" id="input-name" placeholder="Nome">
+      <div id="nomeesobre"> 
+       <input type="text" id="input-name" placeholder="Nome">
         <input type="text" id="input-lastname" placeholder="Sobrenome">
       </div>
       <!-- email-e-casa -->
       <div class="container-contat">
         <input type="email" id="input-email" placeholder="Email">
-        <select id="house" name="casa">
+       <select id="house" name="casa">
           <option value="Gitnória" id="gitnoria-house">Gitnória</option>
           <option value="Reactpuff" id="reactpuff-house">Reactpuff</option>
           <option value="Corvinode" id="corvinode-house">Corvinode</option>
           <option value="Pytherina" id="pytherina-house">Pytherina</option>
         </select>
       </div>
+     </div>
+    
       <!-- radio -->
       <label id="label-family">Qual sua família?</label><br>
       <label for="input-radio1"><input type="radio" name="family" id="input-radio1" class="family" value="Frontend" >Frontend</label><br>
       <label for="input-radio2"><input type="radio" name="family" id="input-radio2" class="family" value="Backend">Backend</label><br>
       <label for="input-radio3"><input type="radio" name="family" id="input-radio3" class="family" value="FullStack">FullStack</label><br>
+    
       <!-- checkbox -->
       <label id="label-content" >Qual conteúdo você está com mais vontade de aprender?</label>
       <div>
